--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 before_script:
     - mkdir -p build/logs
-    - php -S localhost:8000 -t $TRAVIS_BUILD_DIR/tests/web &
+    - php -S localhost:8000 $TRAVIS_BUILD_DIR/tests/web/router.php &
 
 script:
     - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
