--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^7.1",
         "guzzlehttp/psr7": "^1.4",
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/serializer": "^3.3"
+        "symfony/serializer": "^3.3",
+        "symfony/property-access": "^3.3"
     },
     "autoload": {
         "psr-4": {
